crates/keron-lang/tests/corpus/errors/parse/double_comma_list.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `,`, expected `]` or expression
  --> 1:14
  |
1 | val xs = [1, , 2]
  |              ^
